# llama-stack

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.local
.github/: CODEOWNERS  TRIAGERS.md
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/install-llama-stack-client/: action.yml
.github/actions/run-and-record-tests/: action.yml
.github/actions/setup-ollama/: action.yml
.github/actions/setup-runner/: action.yml
.github/actions/setup-test-environment/: action.yml
.github/workflows/: README.md  backward-compat.yml  conformance.yml  install-script-ci.yml  integration-auth-tests.yml  integration-sql-store-tests.yml  integration-tests.yml  integration-vector-io-tests.yml  pre-commit.yml  precommit-execute.yml  precommit-trigger.yml  providers-build.yml  providers-list-deps.yml  python-build-test.yml  record-integration-tests.yml  stale_bot.yml  test-external-provider-module.yml  test-external.yml  ui-unit-tests.yml  unit-tests.yml
benchmarking/k8s-benchmark/: README.md  apply.sh  benchmark.py  openai-mock-server.py  stack-configmap.yaml  stack-k8s.yaml.template  stack_run_config.yaml
benchmarking/k8s-benchmark/results/: guidellm-benchmark-stack-s1-sw1-v1-20250922-103408.txt  guidellm-benchmark-stack-s1-sw2-v1-20250922-104457.txt  guidellm-benchmark-stack-s1-sw4-v1-20250922-105539.txt  guidellm-benchmark-vllm-v1-20250922-111127.txt
benchmarking/k8s-benchmark/scripts/: generate_charts.py  run-all-benchmarks.sh  run-guidellm-benchmark.sh
client-sdks/stainless/: README.md  openapi.stainless.yml  openapi.yml
containers/: Containerfile
context/: docling.md  run_file.yaml
docs/: README.md  docusaurus.config.ts  getting_started.ipynb  getting_started_llama4.ipynb  getting_started_llama_api.ipynb  package-lock.json  package.json  quick_start.ipynb  sidebars.ts
docs/_static/: llama-stack-spec.html  llama-stack-spec.yaml
docs/_static/css/: my_theme.css
docs/_static/js/: horizontal_nav.js
docs/docs/: api-overview.md  index.mdx
docs/docs/advanced_apis/: evaluation.mdx  post_training.mdx  scoring.mdx
docs/docs/building_applications/: agent.mdx  agent_execution_loop.mdx  rag.mdx  (+7 more)
docs/notebooks/: Alpha_Llama_Stack_Post_Training.ipynb  Llama_Stack_Agent_Workflows.ipynb  Llama_Stack_Benchmark_Evals.ipynb  llamastack_agents_getting_started_examples.ipynb
docs/openapi_generator/: generate.py  run_openapi_generator.sh
docs/scripts/: sync-files.js
docs/source/: conf.py
docs/static/: deprecated-llama-stack-spec.html  deprecated-llama-stack-spec.yaml  experimental-llama-stack-spec.html  experimental-llama-stack-spec.yaml  llama-stack-spec.html  llama-stack-spec.yaml  site.webmanifest  stainless-llama-stack-spec.html  stainless-llama-stack-spec.yaml
docs/zero_to_hero_guide/: 00_Inference101.ipynb  01_Local_Cloud_Inference101.ipynb  02_Prompt_Engineering101.ipynb  03_Image_Chat101.ipynb  05_Memory101.ipynb  06_Safety101.ipynb  07_Agents101.ipynb  README.md
experiments/: .gitignore  1-simpleclient.py  10-tools-decorators.py  10b-tools-decorators-no-agents.py  11-mcp.py  12-all-in-one.py  12-tools-json.py  13-all-in-one.py  15-mcp-without-agents.py  15b-mcp-llm-tool-selector.py  16-mcp-docling.py  17-rag-without-agents.py  2-rag-1.py  2-rag-2.py  3-rag.py  4-pipeline.py  5-just-rag-0.py  5-just-rag.py  6-all-rag-methods.py  7-agentic-rag.py  8-components.py  9-chat-with-rag.py  LICENSE  Modelfile  __init__.py  config.yaml  delete_vector_dbs.sh  docling-multimodal-rag.py  litellm-config.yaml  multi-agent.py  ollama-ngrok.sh  ollama-stack-build.yaml  rag_integration_example.py  rag_optimizer_README.md  rag_optimizer_app.py  rag_optimizer_llama_integration.py  rag_optimizer_test.py  rag_parameter_optimizer_enhanced.py  server.py  tool-calling-comparison.md  (+1 more)
experiments/agent-orchestration-system/: README.md  demo.py  orchestrator.py  specialized_agents.py
experiments/conversational_ai_llamastack/: README.md  converse.py  requirements.txt
experiments/rag/: README-RAG-Query-Methods.md  llama-stack-rag-query-methods-comprehensive-plan.md  rag-query-methods-guide.md
experiments/rag_optimizer/: README.md  healthcare_rag_params.json
experiments/telemetry/: CONVERSATION_ANALYSIS_GUIDE.md  CONVERSATION_DATA_SUMMARY.md  OTEL_EXPORTER_USAGE.md  OTEL_EXPORT_GUIDE.md  OTEL_VALIDATION_GUIDE.md  README.md  TELEMETRY_README.md  conversation_patterns.py  conversation_replay.py  examine_conversation_data.py  message_history_analyzer.py  otel_conversation_exporter.py  otel_validator.py  telemetry_working_demo.py  trace_viewer.py
llama_stack/: log.py  schema_utils.py
llama_stack/apis/: auth.py  datatypes.py  resource.py  version.py
llama_stack/auth/: README.md  __init__.py  auth_context.py  auth_provider.py  config.py  middleware.py  types.py
llama_stack/cli/: llama.py  verify_download.py
llama_stack/core/: build_container.sh  client.py  configure.py  datatypes.py  distribution.py  library_client.py  resolver.py  stack.py  start_stack.sh  testing_context.py
llama_stack/distribution/: library_client.py
llama_stack/distributions/: template.py
llama_stack/providers/: datatypes.py
llama_stack/strong_typing/: inspection.py  schema.py
llama_stack/testing/: api_recorder.py  inference_recorder.py
llama_stack/ui/: package-lock.json  package.json
scripts/: check-init-py.sh  diagnose_recordings.py  distro_codegen.py  docker.sh  get_setup_env.py  install.sh  integration-tests.sh  normalize_recordings.py  provider_codegen.py  run-ui-linter.sh  unit-tests.sh  uv-run-with-index.sh
scripts/github/: schedule-record-workflow.sh
scripts/telemetry/: grafana-dashboards.yaml  grafana-datasources.yaml  llama-stack-dashboard.json  otel-collector-config.yaml  prometheus.yml  setup_telemetry.sh
tests/: README.md
tests/backward_compat/: test_run_config.py
tests/common/: mcp.py
tests/integration/: README.md  conftest.py  suites.py  test_persistence_integration.py
tests/unit/: conftest.py
(+1280 files in other folders)
